[project]
name = "syrupy"
version = "5.1.0"
description = "Pytest Snapshot Test Utility"
authors = [{ name = "Noah Ulster" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = ["pytest (>= 8.0.0)"]

[project.urls]
repository = "https://github.com/syrupy-project/syrupy"

[project.entry-points.pytest11]
syrupy = "syrupy"

[dependency-groups]
test = [
    "invoke>=2.2.0,<3",
    "coverage[toml]>=7.6.12,<8",
    "pytest-benchmark>=5.1.0,<6",
    "pytest-xdist>=3.6.1,<4",
]
dev = [
    "mypy>=1.15.0,<2",
    "py-githooks>=1.1.1,<2",
    "twine>=6.1.0,<7",
    "semver>=3.0.4,<4",
    "setuptools-scm>=9.0.0,<10",
    "debugpy>=1.8.12,<2",
    "ruff>=0.9.6",
    "pydantic>=2.12.5",
    "attrs>=25.0.0"
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["src/syrupy"]

[tool.hatch.build.targets.sdist.force-include]
"src/syrupy/**/*" = "src/syrupy/**/*"

[tool.hatch.build.targets.wheel]
include = ["src/syrupy"]

[tool.hatch.build.targets.wheel.sources]
"src/syrupy" = "syrupy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = '-p syrupy -p pytester -p no:legacypath --doctest-modules'
testpaths = ['tests']
xfail_strict = true

[tool.coverage.run]
source = ['./src']

[tool.coverage.report]
exclude_lines = ['pragma: no-cover', 'if TYPE_CHECKING:', '@abstractmethod']

[tool.ruff]
line-length = 88
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "I", # isort
  "UP", # pyupgrade
]
